--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ FLASK_DEBUG=True
 JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
 
 # MongoDB Configuration (optional)
-MONGO_URI=mongodb+srv://college:Dars1234@college.eej7x.mongodb.net/?retryWrites=true&w=majority&appName=college
+MONGO_URI=
 
 # API Configuration
 API_HOST=0.0.0.0
